2010-10-01  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[maint] Let the configure script instantiate rcsfreeze.

	* configure.ac (AC_CONFIG_FILES): Add src/rcsfreeze.

2010-09-30  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[maint] Do "gnulib-tool --add-import" for bootstrap.

	* autogen.sh: Use command ‘add-import’ instead of ‘import’.
	This tracks gnulib-tool changes starting 2010-09-04.
	Reported by Paul Eggert.

2010-09-29  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[maint] Rename top-level directory v/ to tests/.

	* tests: Rename from v.
	* Makefile.am (SUBDIRS): Delete v; add tests.
	* configure.ac (AC_CONFIG_FILES): Delete v/Makefile,
	v/common; add tests/Makefile, tests/common.

2010-09-27  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Release: 5.7.93

	* configure.ac (AC_INIT): Bump version to "5.7.93" for release.

2010-08-20  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Don't avoid any gnulib modules.

	* m4/gnulib-cache.m4 (gl_AVOID): Delete ‘wchar’.

2010-08-20  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Delete redundant texinfo.tex.

	* doc/texinfo.tex: Delete file.
	Reported by Karl Berry.

2010-07-13  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Release: 5.7.92 (pretest for 5.8)

	* configure.ac (AC_INIT): Bump version to "5.7.92".

2010-07-13  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Use gnulib module ‘_Exit’.

	* m4/gnulib-cache.m4 (gl_MODULES): Add ‘_Exit’.

2010-06-24  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Release: 5.7.91 (pretest for 5.8)

	* configure.ac (AC_INIT): Bump version to "5.7.91".

2010-06-24  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Update license to GPLv3+.

	* COPYING: Update to GPLv3.
	* Makefile.am: Update license notice.
	* configure.ac: Likewise.
	* build-aux/extract-help: Likewise.
	* doc/Makefile.am: Likewise.

2010-06-23  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Say "RCS file", not "repository file".

	* doc/rcs.texi (repo): Change expansion to "RCS file";
	throughout, change "a @repo" to "an @repo".