@@ -1,3 +1,9 @@
+2010-10-04  Thien-Thi Nguyen  <ttn@gnuvola.org>
+
+	[v] Use Automake for generating top-level test driver.
+
+	* configure.ac (AC_CONFIG_FILES): Remove tests/common.
+
 2010-10-01  Thien-Thi Nguyen  <ttn@gnuvola.org>
 
 	[maint] Let the configure script instantiate rcsfreeze.
